--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);*/
-    background-color: #c0c0c0;
+    background-color: #dddada;
     box-shadow: 0px 0px 0px 10px #666;
     border: 5px solid black;
     border-radius: 10px;
